# IRustC

./: .env  .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: app.rs  client.rs  main.rs  ui.rs
common/: Cargo.toml
common/src/: lib.rs
entity/src/: lib.rs
entity/src/entities/: message.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220716_182324_initial_tables.rs
server/: Cargo.toml
server/src/: main.rs
