[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

crossterm = "0.24.0"
tui = { version = "0.18.0", features = ["crossterm"] }
unicode-width = "0.1.9"

serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"