[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.24.0"
tui = { version = "0.18.0", features = ["crossterm"] }
sea-orm = { version = "^0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.20.0", features = ["full"] }
dotenv = "0.15.0"

common = { path = "../common" }
entity = { path = "../entity" }
migration = { path = "../migration" }
